<resources>
    <string name="app_name">USC Films</string>
    <string name="home_btn">Home</string>
    <string name="search_btn">Search</string>
    <string name="watchlist_btn">Watchlist</string>
    <string name="app_icon_btn">USC Films</string>
    <string name="movies_btn">Movies</string>
    <string name="tv_btn">TV Shows</string>
    <string name="btn_size">20sp</string>
    <string name="preference_file_key">com.example.usc_film.watchlist</string>
    <string name="preference_title_file_key">com.example.usc_file.watchlist.title</string>
</resources>
