<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="3"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/HomeBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home_btn"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:drawableTop="@drawable/ic_outline_home_24"
            android:background="@android:color/transparent"/>

        <Button
            android:id="@+id/SearchBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search_btn"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:drawableTop="@drawable/ic_baseline_search_24"
            android:background="@android:color/transparent"/>

        <Button
            android:id="@+id/WatchLaterBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/watchlist_btn"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:drawableTop="@drawable/ic_outline_watch_later_24"
            android:background="@android:color/transparent"/>
</LinearLayout>
