<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:id="@+id/top_navbar"
    android:layout_alignParentTop="true"
    android:layout_marginTop="10dp"
    android:background="@color/colorBackground">

    <Button
        android:id="@+id/USC_Films_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/ic_theaters_white_24dp"
        android:paddingStart="20dp"
        android:text="@string/app_icon_btn"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/movies_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/tv_btn"
        android:layout_centerVertical="true"
        android:text="@string/movies_btn"
        android:textSize="13dp"
        android:textColor="@color/colorPrimary"
        android:textAllCaps="false"
        android:background="@android:color/transparent"/>

    <TextView
        android:id="@+id/tv_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="20dp"
        android:text="@string/tv_btn"
        android:textSize="13dp"
        android:textColor="@color/colorPrimary"
        android:textAllCaps="false"
        android:background="@android:color/transparent"/>
</RelativeLayout>
